# template

./: CHANGELOG.rst  LICENSE.rst  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
template/: commandline.json  defaults.json  repl.py  template.py
template/templates/: .coveragerc  .coveralls.yml  CHANGELOG.rst  README.rst  requirements.txt  setup.cfg
template/templates/Makefiles/: pypi
template/templates/license/: MIT.rst
