[metadata]
name = template
version = attr: template.VERSION
description = Script for generating various project files
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
author = cmccandless
keywords = commandline
license = file: LICENSE
url = http://github.com/cmccandless/template

[options]
packages = template
