[metadata]
name = {name}
version = attr: {name}.VERSION
description = {description}
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
author = {author.username}
keywords = {pypi.keywords}
license = file: LICENSE
url = http://github.com/{author.username}/{name}

[options]
packages = {name}, tests
